--- a/scripts/Accessory_figs_20160905.Rmd
+++ b/scripts/Accessory_figs_20160905.Rmd
@@ -1,64 +1,58 @@
-win.metafile("figs2/Accessory_Costs/scaled_ovule count.wmf", height=6, width=6)
+```{r}
+pdf("figs2/Accessory_Costs/scaled_ovule count.pdf", height=6, width=6)
 plot
 
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.05,.05), mai=c(.8,.8,.1,.05)) 
 options(scipen = 5)
 
-mod2 <- sma(scaled_seed_count ~ embryo_endo_size, data=subset(SummarySpp[["mean"]]),method="SMA", log="xy",slope.test=-1)
-mod1 <- sma(scaled_ovule_count ~ prepollen_costs, data=subset(SummarySpp[["mean"]]),method="SMA", log="xy",slope.test=mod2$groupsummary["Slope"][[1]])
+mod2 <- sma(scaled_seed_count ~ seed_costs, data=subset(SummarySpp[["mean"]]),method="SMA", log="xy",slope.test=-1)
+mod1 <- sma(scaled_ovule_count ~ prepollen_costs, data=subset(SummarySpp[["mean"]]),method="SMA", log="xy",slope.test=mod2$groupsummary["Slope"][[1]],elev.test=mod2$coef[[1]][1,1])
 
-plot(scaled_ovule_count ~ prepollen_costs, SummarySpp[["mean"]],log="xy",pch=1,col=col.spp(species),xlab="cost to make a unit: dashed =ovule; solid=seed",ylim=c(.001,200),ylab="scaled count",xlim=c(.01,100),cex=1.5)
-points(scaled_seed_count ~ embryo_endo_size, SummarySpp[["mean"]],cex=1.5,pch=16,col=col.spp(species))
+plot(scaled_ovule_count ~ prepollen_costs, SummarySpp[["mean"]],log="xy",pch=1,col=col.spp(species),xlab="cost to make a unit: dashed =ovule; solid=seed",ylim=c(.001,500),ylab="scaled count",xlim=c(.01,5000),cex=1.5)
+points(scaled_seed_count ~ seed_costs, SummarySpp[["mean"]],cex=1.5,pch=16,col=col.spp(species))
 line_function_log_xy(SummarySpp[["mean"]]$prepollen_costs,mod1,3)
-line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod2,1)
-#points(scaled_seed_count ~ seed_costs, SummarySpp[["mean"]],pch=12,col=col.spp(species))
-arrows(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$scaled_seed_count,SummarySpp[["mean"]]$prepollen_costs,SummarySpp[["mean"]]$scaled_ovule_count,col=col.spp(SummarySpp[["mean"]]$species),code=0,length=.15)
+line_function_log_xy(SummarySpp[["mean"]]$seed_costs,mod2,1)
+#points(scaled_seed_count ~ embryo_endo_size, SummarySpp[["mean"]],pch=12,col=col.spp(species))
+#arrows(SummarySpp[["mean"]]$seed_costs,SummarySpp[["mean"]]$scaled_seed_count,SummarySpp[["mean"]]$prepollen_costs,SummarySpp[["mean"]]$scaled_ovule_count,col=col.spp(SummarySpp[["mean"]]$species),code=0,length=.15)
 
 dev.off()
+```
 
-summary(mod2)
-summary(mod1)
+mod_seed <- sma(scaled_seed_count ~ seed_costs, data=subset(SummaryInd),method="SMA", log="xy",slope.test=-1)
+mod_ovule <- sma(scaled_ovule_count ~ prepollen_costs, data=subset(SummaryInd),method="SMA", log="xy",slope.test=mod2$groupsummary["Slope"][[1]],elev.test=mod2$coef[[1]][1,1])
 
-
-
-mod1 <- sma(scaled_ovule_count ~ prepollen_costs, data=subset(SummarySpp[["mean"]]),method="SMA", log="xy",slope.test=-1)
-mod2 <- sma(scaled_seed_count ~ embryo_endo_size, data=subset(SummarySpp[["mean"]]),method="SMA", log="xy",slope.test=-1)
-plot(scaled_ovule_count ~ prepollen_costs, SummarySpp[["mean"]],log="xy",pch=1,col=col.spp(species),xlab="cost to make a unit: dashed =ovule; solid=seed",ylim=c(.001,200),ylab="scaled count",xlim=c(.01,100),cex=1.5)
-points(scaled_seed_count ~ embryo_endo_size, SummarySpp[["mean"]],cex=1.5,pch=16,col=col.spp(species))
-line_function_log_xy(SummarySpp[["mean"]]$prepollen_costs,mod1,3)
-line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod2,1)
-#points(scaled_seed_count ~ seed_costs, SummarySpp[["mean"]],pch=12,col=col.spp(species))
-arrows(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$scaled_seed_count,SummarySpp[["mean"]]$prepollen_costs,SummarySpp[["mean"]]$scaled_ovule_count,col=col.spp(SummarySpp[["mean"]]$species),code=0)
+plot(scaled_ovule_count ~ prepollen_costs, SummaryInd,log="xy",pch=1,col=col.spp(species),xlab="cost to make a unit: dashed =ovule; solid=seed",ylim=c(.0001,1000),ylab="scaled count",xlim=c(.001,10000),cex=1.5)
+points(scaled_seed_count ~ seed_costs, SummaryInd,cex=1.5,pch=16,col=col.spp(species))
 
 
-plot(prop_prepollen_costs~ embryo_endo_size, data=subset(SummarySpp[["mean"]]),cex=1.5,pch=16,col=col.spp(species),log="x")
-mod <- sma(prop_prepollen_costs~ embryo_endo_size, data=subset(SummarySpp[["mean"]]),log="x",method="SMA")
-summary(mod)
-
-plot(prop_prepollen_costs~ seedset, data=subset(SummarySpp[["mean"]]),cex=1.5,pch=16,col=col.spp(species),log="x")
-mod <- sma(prop_prepollen_costs~ seedset, data=subset(SummarySpp[["mean"]]),log="x",method="SMA")
-summary(mod)
+line_function_log_xy(SummaryInd$seed_costs,mod_seed,1)
+line_function_log_xy(SummarySpp[["mean"]]$prepollen_costs,mod_ovule,3)
 
 
-#mod <- sma(scaled_seed_count ~ embryo_endo_size, data=subset(SummarySpp[["mean"]]),method="SMA", log="xy",slope.test=-1)
-summary(mod1)
-plot(success_inv ~ prepollen_success_inv, SummarySpp[["mean"]],log="xy",pch=16,col=col.spp(species),xlim=c(10,100000),ylim=c(10,100000))
-mod <- sma(success_inv ~ prepollen_success_inv, data=subset(SummarySpp[["mean"]]),method="SMA", log="xy",slope.test=1)
-line_function_log_xy(SummarySpp[["mean"]]$prepollen_success_inv,mod,1)
-line_function_log_xy_zero(SummarySpp[["mean"]]$prepollen_success_inv,mod,1)
+par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.05,.05), mai=c(.8,.8,.1,.05)) 
+plot(repro_inv_per_seed ~ embryo_endo_size, SummarySpp[["mean"]],log="xy",pch=16,col=col.spp(species),ylim=c(.05,10000))
+points(seed_costs ~ embryo_endo_size, SummarySpp[["mean"]],pch=1,col=col.spp(species))
+mod_repro_costs <- sma(repro_inv_per_seed ~ embryo_endo_size, SummarySpp[["mean"]],log="xy",method="SMA",slope.test=1)
+mod_fixed_costs <- sma(seed_costs ~ embryo_endo_size, SummarySpp[["mean"]],log="xy",method="SMA",slope.test=mod_repro_costs$coef[[1]][2,1])
+line_function_log_xy(SummarySpp[["mean"]]$repro_inv_per_seed,mod_repro_costs,3)
+line_function_log_xy(SummarySpp[["mean"]]$seed_costs,mod_fixed_costs,1)
 
-SummaryInd$ovule_ratio <- SummaryInd$prepollen_costs/SummaryInd$embryo_endo_size
+summary(mod_repro_costs)
+summary(mod_fixed_costs)
 
-SummarySpp[["mean"]]$pre_pollen_all_inv_scaled <- SummarySpp[["mean"]]$prepollen_all_inv /SummarySpp[["mean"]]$leaf_area
+plot(prepollen_costs ~ embryo_endo_size, SummarySpp[["mean"]],log="xy",pch=16,col=col.spp(species),ylim=c(.005,5000))
+points(prepollen_all_per_seed ~ embryo_endo_size, SummarySpp[["mean"]],pch=1,col=col.spp(species))
+#points(prepollen_failure_per_seed ~ embryo_endo_size, SummarySpp[["mean"]],log="xy",pch="-",col=col.spp(species))
+mod_prepollen_all <- sma(prepollen_all_per_seed ~ embryo_endo_size, SummarySpp[["mean"]],log="xy",method="SMA",slope.test=mod_repro_costs$coef[[1]][2,1])
+mod_prepollen_costs <- sma(prepollen_costs ~ embryo_endo_size, SummarySpp[["mean"]],log="xy",method="SMA",slope.test=mod_repro_costs$coef[[1]][2,1])
+line_function_log_xy(SummarySpp[["mean"]]$prepollen_all_per_seed,mod_prepollen_all,3)
+line_function_log_xy(SummarySpp[["mean"]]$prepollen_costs,mod_prepollen_costs,1)
 
-plot(leaf_area~prepollen_all_inv,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16)
-mod <- sma(leaf_area~prepollen_all_inv,SummarySpp[["mean"]],log="xy",slope=1, method="SMA")
-summary(mod)
+summary(mod_prepollen_all)
+summary(mod_prepollen_costs)
 
-plot(pre_pollen_all_inv_scaled~embryo_endo_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16)
-mod <- sma(pre_pollen_all_inv_scaled~embryo_endo_size,SummarySpp[["mean"]],log="xy",slope=1, method="SMA")
 
-dev.off()
+
 
 #Data 0. means, counts to include in manuscript
 ```{r}
@@ -238,6 +232,14 @@ plot(fit,xlab=xvar,ylab=yvar,pch=16, col=col.spp(fit$groupsummary$group),lty=res
 results
 ```
 
+
+plot(prop_prepollen_all~seedset,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="x")
+
+plot(prop_prepollen_costs~seedset,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="")
+
+mod <- sma(prop_prepollen_all~embryo_endo_size,SummaryInd,log="x",method="SMA")
+summary(mod)
+
 #Table 1 showing accessory cost values for the species
 ```{r}
 acc_costs_spp <- dplyr::select(SummarySpp[["mean"]],species,embryo_endo_size,seedset,repro_inv_per_seed,prop_failure,prop_prepollen_vs_RE, prop_dispersal_vs_RE,prop_embryo_endo_vs_RE,seed_costs,prop_prepollen_costs,prop_postpollen_costs,embryo_endo_size,pack_disp_costs,prepollen_costs,failure_inv,repro_inv,seed_count)
@@ -281,6 +283,12 @@ y.error.bars(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$repro_in
 slopes <- sma(repro_inv_per_seed ~ embryo_endo_size,data=subset(SummarySpp[["mean"]]),slope.test=1,method="SMA", log="xy")
 abline(slopes$groupsummary["Int"][[1]],slopes$groupsummary["Slope"][[1]])
 abline(slopes$groupsummary["Int"][[1]],1,lty=2)
+summary(slopes)
+
+plot(prop_prepollen_costs_all_repro~ seedset,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy",cex=1.5)
+
+
+
 
 acc_by_species <- dplyr::select(slopes$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI,Slope_test_p)
 
@@ -410,49 +418,33 @@ write.csv(results, file="ms/Accessory/Table03_correlations_with_repro_inv.csv",r
 ```
 
 
-plot(scaled_seed_count~prop_prepollen_costs,SummarySpp[["mean"]],pch=16,log="y",col=col.spp(species))
-points(scaled_ovule_count~prop_prepollen_costs,SummarySpp[["mean"]],pch=21,col=col.spp(species))
-#points(scaled_failure_count~embryo_endo_size,SummaryInd,pch=2,col=col.spp(species))
-axis(2, at=c(0.0001,0.01,1,100), labels=c(0.0001,0.01,1,100),cex.axis=1)
-axis(1, at=c(0.01,1,100), labels=c("","",""),cex.axis=1)
-mtext("count, scaled to plant size",2,line=2.3)
-mod1 <- sma(scaled_seed_count~prop_prepollen_costs,data=subset(SummarySpp[["mean"]],scaled_seed_count!=0),log="y",slope=-1,method="SMA")
-mod2 <- sma(scaled_ovule_count~prepollen_costs,data=subset(SummarySpp[["mean"]],scaled_ovule_count!=0),log="xy",slope=3.23,method="SMA")
-mod3 <- sma(scaled_failure_count~embryo_endo_size,data=subset(SummaryInd,scaled_failure_count!=0),log="xy",slope=-1,method="SMA")
-
-line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod1,1)
-line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod2,2)
-legend("topright",legend=c("seed count","initiated ovules count"),col=c("black","black"),pch=c(16,21),bty="n")
-
-summary(mod1)
-summary(mod2)
-extra.top.left.logxy("a",2,1.2)
 
 #Figure 2. Scaling of accessory costs versus weight of embryo + endosperm, by species
 ```{r}
 win.metafile("figs2/Accessory_Costs/Figure02_embryo_size_acc_cost_correlations.wmf", height=9, width=10)
 plot
 
-par(mfrow=c(2,2), cex=1, omi=c(1,.1,.05,.05), mai=c(.2,.8,.1,.05)) 
+par(mfrow=c(3,1), cex=1, omi=c(1,.1,.05,.05), mai=c(.2,.8,.1,.05)) 
 options(scipen = 5)
 
-plot((scaled_seed_count)~(embryo_endo_size),SummaryInd,pch=16,log="xy",col=col.spp(species),xlim=c(.002,500),ylim=c(1e-4,1000),yaxt="n",xaxt="n",ylab="")
-points(scaled_ovule_count~embryo_endo_size,SummaryInd,pch=21,col=col.spp(species))
-#points(scaled_failure_count~embryo_endo_size,SummaryInd,pch=2,col=col.spp(species))
+plot((scaled_seed_count)~(embryo_endo_size),SummaryInd,pch=16,log="xy",col=col.spp(species),xlim=c(.002,500),ylim=c(1e-4,5000),yaxt="n",xaxt="n",ylab="")
+points(scaled_ovule_count~prepollen_costs,SummaryInd,pch=21,col=col.spp(species))
+
 axis(2, at=c(0.0001,0.01,1,100), labels=c(0.0001,0.01,1,100),cex.axis=1)
 axis(1, at=c(0.01,1,100), labels=c("","",""),cex.axis=1)
 mtext("count, scaled to plant size",2,line=2.3)
-mod1 <- sma(scaled_seed_count~embryo_endo_size,data=subset(SummaryInd,scaled_seed_count!=0),log="xy",slope=-1,method="SMA")
-mod2 <- sma(scaled_ovule_count~embryo_endo_size,data=subset(SummaryInd,scaled_ovule_count!=0),log="xy",slope=-1,method="SMA")
-mod3 <- sma(scaled_failure_count~embryo_endo_size,data=subset(SummaryInd,scaled_failure_count!=0),log="xy",slope=-1,method="SMA")
 
+mod_seed <- sma(scaled_seed_count~embryo_endo_size,data=subset(SummaryInd,scaled_seed_count!=0),log="xy",slope=-1,method="SMA")
+mod_ovule <- sma(scaled_ovule_count~prepollen_costs,data=subset(SummaryInd,scaled_ovule_count!=0),log="xy",method="SMA",slope.test=mod_seed$groupsummary["Slope"][[1]],elev.test=mod_seed$coef[[1]][1,1])
 
-
-line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod1,1)
-line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod2,2)
+line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod_seed,1)
+line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod_ovule,2)
 legend("topright",legend=c("seed count","initiated ovules count"),col=c("black","black"),pch=c(16,21),bty="n")
-
 extra.top.left.logxy("a",2,1.2)
+
+summary(mod_seed)
+summary(mod_ovule)
+
 
 plot(seedset~embryo_endo_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16, xlim=c(.002,500),ylim=c(.004,.6),cex=1.5,xaxt="n",xlab="",ylab="")
 mod <- sma(seedset~embryo_endo_size,SummarySpp[["mean"]],log="xy", method="SMA")
@@ -475,6 +467,7 @@ line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod,1)
 line_function_log_xy_zero(SummarySpp[["mean"]]$embryo_endo_size,mod,1)
 extra.top.left.logxy("c",2,1.2)
 
+
 plot(postpollen_all_per_seed~embryo_endo_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,5000), xlim=c(.002,500), ylab="",xlab="",cex=1.5)
 y.error.bars.2(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$postpollen_all_per_seed,SummarySpp[["se"]]$prepollen_costs)
 mod <- sma(postpollen_all_per_seed~embryo_endo_size,SummarySpp[["mean"]],log="xy",method="SMA")
@@ -488,6 +481,291 @@ extra.top.left.logxy("d",2,1.2)
 mtext(text="     seed size (mg)",side=1,line=1.5,outer=TRUE,adj=0.5)
 mtext(text="                     parental pessimist",line=3,side=1,adj=0,outer=TRUE,font=3)
 mtext(text="parental optimist    ",line=3,side=1,adj=1,outer=TRUE,font=3)
+
+dev.off()
+```
+
+#predictions
+```{r}
+win.metafile("figs2/Accessory_Costs/Figure01_predictions.wmf", height=9, width=6)
+plot
+
+par(mfrow=c(3,2), cex=1, omi=c(.1,.1,.05,.2), mai=c(.8,.8,.1,.05)) 
+plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
+segments(x0=.2,x1=.9,y0=.9,y1=.2,lty=2)
+segments(x0=.1,x1=.8,y0=.8,y1=.1,lty=1)
+axis(1, at=c(0,1),labels=c("lower","higher"),cex.axis=1)
+axis(2, at=c(0,1),labels=c("lower","higher"),cex.axis=1,las=2)
+mtext(text="count, scaled to leaf area",side=2,line=1.3,outer=FALSE,cex=0.8)
+mtext(text="costs (mg/seed)",side=1,line=1.3,outer=FALSE,cex=0.8)
+legend("bottomleft",legend=c("seed count by success costs","initiated ovules count by pollen-attraction costs"),col=c("black","black"),pch=c(16,21),bty="n",cex=0.5)
+
+
+plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
+segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=1)
+axis(1, at=c(0,1),labels=c(0,1),cex.axis=1)
+axis(2, at=c(0,1),labels=c("lower","higher"),cex.axis=1,las=2)
+mtext(text="choosiness (ovule:seed)",side=2,line=1.3,outer=FALSE,cex=0.8)
+mtext(text="proportion reproductive costs to pollen-attraction costs for 1 ovule",side=1,line=1.3,outer=FALSE,cex=0.8)
+
+plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
+segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=1)
+segments(x0=.15,x1=.9,y0=.15,y1=.9,lty=2)
+axis(2, at=c(0,1),labels=c(0,1),cex.axis=1,las=2)
+axis(1, at=c(0,1),labels=c("smaller","larger"),cex.axis=1)
+mtext(text="proportion total success costs",side=2,line=1.8,outer=FALSE,cex=0.8)
+mtext(text="seed size (mg)",side=1,line=1.3,outer=FALSE,cex=0.8)
+legend("bottomleft",legend=c("pollen-attraction costs","provisioning costs"),col=c("black","black"),pch=c(16,21),bty="n",cex=0.5)
+
+plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
+segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=1)
+segments(x0=.15,x1=.85,y0=.15,y1=.85,lty=2)
+axis(2, at=c(0,1),labels=c(0,1),cex.axis=1,las=2)
+axis(1, at=c(0,1),labels=c("smaller","larger"),cex.axis=1)
+mtext(text="proportion all pollen-attraction investment",side=2,line=1.8,outer=FALSE,cex=0.8)
+mtext(text="seed size (mg)",side=1,line=1.3,outer=FALSE,cex=0.8)
+legend("bottomleft",legend=c("become seeds","are aborted before provisioning"),title="into ovules that:",col=c("black","black"),pch=c(16,21),bty="n",cex=0.5,xjust=0)
+
+plot(0,0,ylim=c(0,1),yaxt="n",xaxt="n",xlim=c(0,1),col="white",xlab="",ylab="")
+segments(x0=.1,x1=.9,y0=.9,y1=.1,lty=2)
+segments(x0=.15,x1=.85,y0=.15,y1=.85,lty=1)
+axis(2, at=c(0,1),labels=c(0,1),cex.axis=1,las=2)
+axis(1, at=c(0,1),labels=c("smaller","larger"),cex.axis=1)
+mtext(text="proportion all provisioning investment",side=2,line=1.8,outer=FALSE,cex=0.8)
+mtext(text="seed size (mg)",side=1,line=1.3,outer=FALSE,cex=0.8)
+legend("bottomleft",legend=c("become seeds","are aborted"),title="into zygotes that:",col=c("black","black"),pch=c(16,21),bty="n",cex=0.5,xjust=0)
+
+dev.off()
+```
+
+#outcomes - Figure 2
+```{r}
+win.metafile("figs2/Accessory_Costs/Figure02_Oct24.wmf", height=9, width=6)
+plot
+
+par(mfrow=c(3,2), cex=1, omi=c(.1,.1,.05,.05), mai=c(.7,.8,.05,.05)) 
+options(scipen = 5)
+
+plot(scaled_seed_count~seed_costs,SummarySpp[["mean"]],pch=16,log="xy",col="#ca0020",xlim=c(.01,5000),ylim=c(5e-4,500),yaxt="n",xaxt="n",ylab="",xlab="",cex=1)
+points(scaled_ovule_count~prepollen_costs,SummarySpp[["mean"]],pch=16,col="#0571b0",cex=1)
+
+axis(2, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.8,las=2)
+axis(1, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=0.8)
+mtext("costs to make a successful unit",1,line=1.8,cex=0.7)
+mtext("count, scaled to plant size",2,line=2.3,cex=0.7)
+
+mod_seed <- sma(scaled_seed_count~seed_costs,data=SummarySpp[["mean"]],log="xy",slope=-1,method="SMA")
+mod_ovule <- sma(scaled_ovule_count~prepollen_costs,data=SummarySpp[["mean"]],log="xy",method="SMA",slope.test=mod_seed$groupsummary["Slope"][[1]],elev.test=mod_seed$coef[[1]][1,1])
+
+line_function_log_xy(SummarySpp[["mean"]]$seed_costs,mod_seed,1,col="#ca0020")
+line_function_log_xy(SummarySpp[["mean"]]$prepollen_costs,mod_ovule,1,col="#0571b0")
+legend("bottomleft",legend=c("seed count by success costs","initiated ovules count by","pollen-attraction costs"),col=c("#ca0020","#0571b0","white"),pch=c(16,16,16),bty="n",cex=0.7)
+extra.top.left.logxy("a",2,1)
+
+plot(choosiness~prop_prepollen_costs_all_repro,SummarySpp[["mean"]],log="xy",col="#0571b0",pch=16,xlim=c(0.002,.5),ylim=c(3,800),xaxt="n",yaxt="n",cex=1,ylab="",xlab="")
+axis(2, at=c(10,100,1000), labels=c(10,100,1000),cex.axis=0.8,las=2)
+axis(1, at=c(0.01,0.1), labels=c(0.01,0.1),cex.axis=0.8)
+mtext("prop reproductive investment to",1,line=1.7,cex=0.7)
+mtext("successful pollen-attraction costs",1,line=2.3,cex=0.7)
+mtext("choosiness (ovules:seed)",2,line=2.3,cex=0.7)
+
+mod_choosy <- sma(choosiness~prop_prepollen_costs_all_repro,data=SummarySpp[["mean"]],log="xy",slope=-1,method="SMA")
+line_function_log_xy(SummarySpp[["mean"]]$prop_prepollen_costs_all_repro,mod_choosy,1,col="#0571b0")
+
+extra.top.left.logxy("b",2,1)
+
+plot(prop_prepollen_costs~embryo_endo_size,SummarySpp[["mean"]],pch=16,log="x",col="#0571b0",
+     ylim=c(-0.1,1.1),xlim=c(.01,100),xlab="",ylab="",xaxt="n",yaxt="n")
+points(prop_postpollen_costs~embryo_endo_size,SummarySpp[["mean"]],pch=16,col="#ca0020")
+extra.top.left.logx("c",2,1)
+axis(2, at=c(0,.2,.4,.6,.8,1), labels=c(0,0.2,0.4,0.6,0.8,1),cex.axis=0.8,las=2)
+axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.8)
+mtext("seed size (mg)",1,line=1.8,cex=0.7)
+mtext("prop successful investment",2,line=2.3,cex=0.7)
+legend("bottomleft",legend=c("pollen-attraction costs","provisioning costs"),col=c("#0571b0","#ca0020"),pch=c(16,16),bty="n",cex=0.7)
+
+mod_prop_prepollen_costs <- sma(prop_prepollen_costs~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
+mod_prop_postpollen_costs <- sma(prop_postpollen_costs~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
+
+line_function_log_x(SummarySpp[["mean"]]$embryo_endo_size,mod_prop_prepollen_costs,1,col="#0571b0")
+line_function_log_x(SummarySpp[["mean"]]$embryo_endo_size,mod_prop_postpollen_costs,1,col="#ca0020")
+
+
+plot(prop_prepollen_success~embryo_endo_size,SummarySpp[["mean"]],pch=16,log="x",col="#0571b0",ylim=c(-0.1,1.1),xlim=c(.01,100),xlab="",ylab="",xaxt="n",yaxt="n")
+points(prop_prepollen_failure~embryo_endo_size,SummarySpp[["mean"]],pch=16,col="#ca0020")
+extra.top.left.logx("d",2,1)
+axis(2, at=c(0,.2,.4,.6,.8,1), labels=c(0,0.2,0.4,0.6,0.8,1),cex.axis=0.8,las=2)
+axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.8)
+mtext("seed size (mg)",1,line=1.8,cex=0.7)
+mtext("prop total pollen-attraction investment",2,line=2.3,cex=0.7)
+legend("bottomleft",legend=c("successful ovules","aborted ovules"),col=c("#0571b0","#ca0020"),pch=c(16,16),bty="n",cex=0.7)
+
+
+mod_prop_prepollen_success <- sma(prop_prepollen_success~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
+mod_prop_prepollen_failure <- sma(prop_prepollen_failure~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
+
+line_function_log_x(SummarySpp[["mean"]]$embryo_endo_size,mod_prop_prepollen_success,1,col="#0571b0")
+line_function_log_x(SummarySpp[["mean"]]$embryo_endo_size,mod_prop_prepollen_failure,1,col="#ca0020")
+
+plot(prop_postpollen_success~embryo_endo_size,SummarySpp[["mean"]],pch=16,log="x",col="#0571b0",ylim=c(-0.1,1.1),xlim=c(.01,100),xlab="",ylab="",xaxt="n",yaxt="n")
+points(prop_postpollen_failure~embryo_endo_size,SummarySpp[["mean"]],pch=16,col="#ca0020")
+extra.top.left.logx("e",2,1)
+axis(2, at=c(0,.2,.4,.6,.8,1), labels=c(0,0.2,0.4,0.6,0.8,1),cex.axis=0.8,las=2)
+axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.8)
+mtext("seed size (mg)",1,line=1.8,cex=0.7)
+mtext("prop total provisioning investment",2,line=2.3,cex=0.7)
+legend("bottomleft",legend=c("successful zygotes","aborted zygotes"),col=c("#0571b0","#ca0020"),pch=c(16,16),bty="n",cex=0.7)
+
+
+mod_prop_postpollen_success <- sma(prop_postpollen_success~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
+mod_prop_postpollen_failure <- sma(prop_postpollen_failure~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
+
+line_function_log_x(SummarySpp[["mean"]]$embryo_endo_size,mod_prop_postpollen_success,1,col="#0571b0")
+line_function_log_x(SummarySpp[["mean"]]$embryo_endo_size,mod_prop_postpollen_failure,1,col="#ca0020")
+
+plot(prepollen_costs~embryo_endo_size,SummarySpp[["mean"]],pch=16,log="xy",col="#0571b0",xlim=c(.002,100),ylim=c(.01,20000),xlab="",ylab="",xaxt="n",yaxt="n")
+points(provisioning_costs~embryo_endo_size,SummarySpp[["mean"]],pch=16,col="#ca0020")
+extra.top.left.logxy("f",2,1)
+axis(2, at=c(0.01,1,100,10000), labels=c(0.01,1,100,10000),cex.axis=0.8,las=2)
+axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=0.8)
+mtext("seed size (mg)",1,line=1.8,cex=0.7)
+mtext("success cost (mg/seed)",2,line=2.3,cex=0.7)
+legend("bottomright",legend=c("pollen-attraction","provisioning"),col=c("#0571b0","#ca0020"),pch=c(16,16),bty="n",cex=0.7)
+
+
+mod_prepollen_costs <- sma(prepollen_costs~embryo_endo_size,SummarySpp[["mean"]],log="xy",method="SMA")
+mod_provisioning_costs <- sma(provisioning_costs~embryo_endo_size,SummarySpp[["mean"]],log="xy",method="SMA",slope.test = mod_prepollen_costs$groupsummary$Slope_highCI)
+line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod_prepollen_costs,1,col="#0571b0")
+line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod_provisioning_costs,1,col="#ca0020")
+
+dev.off()
+```
+
+
+#Table with above model results
+```{r}
+mod_prop_prepollen_costs <- sma(prop_prepollen_costs~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
+mod_prop_postpollen_costs <- sma(prop_postpollen_costs~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
+mod_prop_prepollen_success <- sma(prop_prepollen_success~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
+mod_prop_prepollen_failure <- sma(prop_prepollen_failure~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
+mod_prop_postpollen_success <- sma(prop_postpollen_success~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
+mod_prop_postpollen_failure <- sma(prop_postpollen_failure~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
+
+energy_prop <- dplyr::select(mod_prop_prepollen_costs$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI)
+energy_prop$test[1] <- "Proportion prepollen costs"
+
+temp <- dplyr::select(mod_prop_prepollen_success$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI)
+temp$test[1] <- "Proportion prepollen costs to success"
+energy_prop <- rbind(energy_prop,temp)
+
+temp <- dplyr::select(mod_prop_postpollen_success$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI)
+temp$test[1] <- "Proportion postpollen costs to success"
+energy_prop <- rbind(energy_prop,temp)
+
+#temp <- dplyr::select(mod_prop_postpollen_costs$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI)
+#temp$test[1] <- "Proportion postpollen costs"
+#energy_prop <- rbind(energy_prop,temp)
+
+#temp <- dplyr::select(mod_prop_prepollen_failure$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI)
+#temp$test[1] <- "Proportion prepollen costs to failure"
+#energy_prop <- rbind(energy_prop,temp)
+
+#temp <- dplyr::select(mod_prop_postpollen_failure$groupsummary,r2,pval,Slope,Slope_lowCI,Slope_highCI,Int,Int_lowCI,Int_highCI)
+#temp$test[1] <- "Proportion postpollen costs to failure"
+#energy_prop <- rbind(energy_prop,temp)
+
+```
+
+
+
+
+
+#Figure 2_NEW. Scaling of accessory costs versus weight of embryo + endosperm, by species
+```{r}
+win.metafile("figs2/Accessory_Costs/Figure02_embryo_size_acc_cost_correlations.wmf", height=9, width=10)
+plot
+
+par(mfrow=c(2,2), cex=1, omi=c(1,.1,.05,.05), mai=c(.2,.8,.1,.05)) 
+options(scipen = 5)
+
+
+plot((repro_all_count/seed_count)~prop_prepollen_costs_all_repro,SummarySpp[["mean"]],pch=16,log="xy",col=col.spp(species),ylab="",ylim=c(.8,500),yaxt="n",xlim=c(.0015,.5),xaxt="n")
+axis(2, at=c(1,10,100), labels=c(1,10,100),cex.axis=1)
+axis(1, at=c(0.001,0.005,0.01,0.05,0.1,0.5), labels=c(0.001,0.005,0.01,0.05,0.1,0.5),cex.axis=1)
+mtext("choosiness (ovules initiated per seed matured)",2,line=2.3)
+mtext("proportion reproductive investment for successful pollen-attraction costs",1,line=2.3)
+
+mod_choosy <- sma((repro_all_count/seed_count)~prop_prepollen_costs_all_repro,data=SummarySpp[["mean"]],log="xy",slope=-1,method="SMA")
+
+line_function_log_xy(SummarySpp[["mean"]]$prop_prepollen_costs_all_repro,mod_choosy,1)
+summary(mod_choosy)
+
+plot(seedset~embryo_endo_size,SummarySpp[["mean"]],log="xy",col=col.spp(species),pch=16, xlim=c(.002,500),ylim=c(.004,.6),cex=1.5,xaxt="n",xlab="",ylab="")
+mod <- sma(seedset~embryo_endo_size,SummarySpp[["mean"]],log="xy", method="SMA")
+y.error.bars.2(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$seedset,SummarySpp[["se"]]$seedset)
+#text((10^(0.99*(par("usr")[2]-par("usr")[1])+par("usr")[1])),(10^(0.97*(par("usr")[4]-par("usr")[3])+par("usr")[3])),paste("r2 = ",round(sma_sum(mod)[1],2)),adj=1)
+line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod,1)
+axis(1, at=c(0.01,1,100), labels=c("","",""),cex.axis=1)
+mtext("seed set",2,line=2.3)
+extra.top.left.logxy("b",2,1.2)
+summary(mod)
+
+plot(prepollen_costs~embryo_endo_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="xy", yaxt="n",xaxt="n", ylim=c(.02,5000), xlim=c(.002,500), ylab="",xlab="",cex=1.5)
+y.error.bars.2(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$prepollen_costs,SummarySpp[["se"]]$prepollen_costs)
+
+points(provisioning_costs~embryo_endo_size,SummarySpp[["mean"]],col=col.spp(species),pch=21,cex=1.5)
+y.error.bars.2(SummarySpp[["mean"]]$embryo_endo_size,SummarySpp[["mean"]]$provisioning_costs,SummarySpp[["se"]]$provisioning_costs)
+
+axis(2, at=c(0.1,10,1000), labels=c(0.1,10,1000),cex.axis=1)
+axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=1)
+mtext("costs (mg/ovule)",2,line=2.3)
+
+mod_prepollen <- sma(prepollen_costs~embryo_endo_size,SummarySpp[["mean"]],log="xy",method="SMA")
+mod_provision <- sma(postpollen_all_per_seed~embryo_endo_size,SummarySpp[["mean"]],log="xy",method="SMA",slope.test=mod_prepollen$groupsummary["Slope"][[1]])
+
+
+line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod_prepollen,1)
+line_function_log_xy(SummarySpp[["mean"]]$embryo_endo_size,mod_provision,2)
+
+legend("topright",legend=c("pollen-attraction","provisioning"),col=c("black","black"),pch=c(16,21),bty="n")
+extra.top.left.logxy("c",2,1.2)
+
+plot(prop_prepollen_costs~embryo_endo_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="x", yaxt="n",xaxt="n", ylim=c(0,1), xlim=c(.002,500), ylab="",xlab="",cex=1.5)
+points(prop_prepollen_all~embryo_endo_size,SummarySpp[["mean"]],col=col.spp(species),pch=1,cex=1.5)
+axis(2, at=c(0,.5,1), labels=c(0,0.5,1.0),cex.axis=1)
+axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=1)
+extra.top.left.logx("d",2,1.2)
+
+mod_prop_prepollen_costs <- sma(prop_prepollen_costs~embryo_endo_size,SummarySpp[["mean"]],log="x",method="SMA",slope.test=0)
+mod_prop_prepollen_all <- sma(prop_prepollen_all~embryo_endo_size,SummarySpp[["mean"]],log="x",method="SMA",slope.test=0)
+
+line_function_log_x(SummarySpp[["mean"]]$embryo_endo_size,mod_prop_prepollen_costs,1)
+
+summary(mod_prop_prepollen_costs)
+summary(mod_prop_prepollen_all)
+
+
+plot(prop_postpollen_success~embryo_endo_size,SummarySpp[["mean"]],col=col.spp(species),pch=16,log="x", yaxt="n",xaxt="n", ylim=c(0,1), xlim=c(.002,500), ylab="",xlab="",cex=1.5)
+points(prop_prepollen_success~embryo_endo_size,SummarySpp[["mean"]],col=col.spp(species),pch=1,cex=1.5)
+axis(2, at=c(0,.5,1), labels=c(0,0.5,1.0),cex.axis=1)
+axis(1, at=c(0.01,1,100), labels=c(0.01,1,100),cex.axis=1)
+extra.top.left.logx("d",2,1.2)
+
+mod_prop_postpollen_success <- sma(prop_postpollen_success~embryo_endo_size,SummarySpp[["mean"]],log="x",method="SMA")
+mod_prop_prepollen_success <- sma(prop_prepollen_success~embryo_endo_size,SummarySpp[["mean"]],log="x",method="SMA")
+
+line_function_log_x(SummarySpp[["mean"]]$embryo_endo_size,mod_prop_postpollen_success,1)
+line_function_log_x(SummarySpp[["mean"]]$embryo_endo_size,mod_prop_prepollen_success,3)
+
+summary(mod_prop_postpollen_success)
+summary(mod_prop_prepollen_success)
+
+
+mtext(text="     seed size (mg)",side=1,line=1.5,outer=TRUE,adj=0.5)
+mtext(text="                     parental pessimist",line=3,side=1,adj=0,outer=TRUE,font=3)
+mtext(text="parental optimist    ",line=3,side=1,adj=1,outer=TRUE,font=3)
+
+
 
 dev.off()
 ```
