--- a/scripts/Accessory_figs_20160905.Rmd
+++ b/scripts/Accessory_figs_20160905.Rmd
@@ -591,7 +591,7 @@ line_function_log_x(SummarySpp[["mean"]]$embryo_endo_size,mod_prop_prepollen_cos
 line_function_log_x(SummarySpp[["mean"]]$embryo_endo_size,mod_prop_postpollen_costs,1,col="#ca0020")
 
 
-plot(prop_prepollen_success~embryo_endo_size,SummarySpp[["mean"]],pch=16,log="x",col="#0571b0",ylim=c(-0.1,1.1),xlim=c(.01,100),xlab="",ylab="",xaxt="n",yaxt="n")
+plot(prop_prepollen_success~embryo_endo_size,SummarySpp[["mean"]],pch=16,log="x",col="#0571b0",ylim=c(-.1,1.1),xlim=c(.01,100),xlab="",ylab="",xaxt="n",yaxt="n")
 points(prop_prepollen_failure~embryo_endo_size,SummarySpp[["mean"]],pch=16,col="#ca0020")
 extra.top.left.logx("d",2,1)
 axis(2, at=c(0,.2,.4,.6,.8,1), labels=c(0,0.2,0.4,0.6,0.8,1),cex.axis=0.8,las=2)
@@ -647,6 +647,7 @@ dev.off()
 mod_prop_prepollen_costs <- sma(prop_prepollen_costs~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
 mod_prop_postpollen_costs <- sma(prop_postpollen_costs~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
 mod_prop_prepollen_success <- sma(prop_prepollen_success~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
+mod_prop_prepollen_success_SMA <- sma(prop_prepollen_success~embryo_endo_size,SummarySpp[["mean"]],log="x",method="SMA")
 mod_prop_prepollen_failure <- sma(prop_prepollen_failure~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
 mod_prop_postpollen_success <- sma(prop_postpollen_success~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
 mod_prop_postpollen_failure <- sma(prop_postpollen_failure~embryo_endo_size,SummarySpp[["mean"]],log="x",method="OLS")
